# tapa

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  biome.json  index.html  lefthook.yml  package-lock.json  package.json  size-budget.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  weekly.yml
docs/: VISION.md
scripts/: check-size.mjs  check-size.test.mjs  gen-third-party-licenses.sh
src/: App.search.test.tsx  App.test.tsx  App.tsx  bugtoprompt.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  teleprompter.json
src-tauri/icons/: icon.icns
src-tauri/src/: brain.rs  commands.rs  default_handler.rs  fs_tree.rs  lib.rs  search.rs  teleprompter.rs  watcher.rs
src/components/: ContextMenu.tsx
src/components/command-palette/: CommandPalette.tsx  PaletteDialog.test.tsx  PaletteDialog.tsx
src/components/editor/: Editor.tsx  live-preview-theme.ts  live-preview.test.ts  live-preview.ts
src/lib/: context-menu.test.ts  context-menu.ts  fuzzy.test.ts  fuzzy.ts  md-to-text.test.ts  md-to-text.ts  plugin-config.test.ts  plugin-config.ts  plugins.ts  registry.test.ts  registry.ts  source-map.test.ts  source-map.ts  tauri.ts  theme.test.ts  theme.ts  toast.ts  tree.test.ts  tree.ts  useFileWatcher.ts  useNewFile.ts  useOsOpen.ts
src/modules/: reveal.ts
src/state/: store.ts
(+38 files in other folders)
