[package]
name = "app"
version = "0.2.1"
description = "A fast, minimal, Rust-based Markdown reader and editor."
authors = ["Ary Rabelo <aryrabelo@gmail.com>"]
license = "MIT"
repository = "https://github.com/aryrabelo/tapa"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
walkdir = "2"
notify = "6"
tauri-plugin-dialog = "2"
parking_lot = "0.12"
regex = "1"
memchr = "2"

# macOS-only: CFString FFI for LaunchServices default-handler commands.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[dev-dependencies]
tempfile = "3"

# Size-optimized release build (the bundled binary is the download weight).
# Tauri-recommended profile: ~30-45% smaller than the default release build.
[profile.release]
opt-level = "s"   # optimize for size (negligible runtime cost for an I/O-bound app)
lto = true        # link-time optimization across crates
codegen-units = 1 # maximize cross-unit optimization (slower build, smaller binary)
panic = "abort"   # drop unwinding tables
strip = true      # strip debug symbols
